null check and refactor

--- a/app/src/main/res/layout-sw720dp-land/forecast_fragment.xml
+++ b/app/src/main/res/layout-sw720dp-land/forecast_fragment.xml
@@ -68,7 +68,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_na"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/dayLabel_1"
                 android:layout_width="match_parent"
@@ -116,7 +117,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_na"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/dayLabel_2"
                 android:layout_width="match_parent"
@@ -164,7 +166,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_na"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/dayLabel_3"
                 android:layout_width="match_parent"
@@ -212,7 +215,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_na"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"/>
             <TextView
                 android:id="@+id/dayLabel_4"
                 android:layout_width="match_parent"
@@ -262,7 +266,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_na"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/dayLabel_5"
