--- a/app/src/main/res/layout-sw720dp/forecast_fragment.xml
+++ b/app/src/main/res/layout-sw720dp/forecast_fragment.xml
@@ -146,6 +146,7 @@
                 android:text="lTemp2"
                 android:layout_weight="1"
                 android:textAlignment="center"
+                android:textSize="@dimen/fontLand"
                 />
 
 
